sass/stylesheets/sass/screen.scss
/* ... */
.search-suggest {
	position: absolute;
	z-index: 1000;
	padding: 0 5px;
	min-width: 16px;
	color: $font-alt-color;
	background-color: $form-bg-color;
	border: 1px solid $action-border-color;
	border-top: none;
	@include box-shadow(0 6px 10px 0 $action-shadow-color);

	li {
		display: block;
		height: inherit;
		line-height: normal;
		color: $font-color;
		padding: 0.4em 5px;
		margin: 0 -5px;
		cursor: pointer;
		@include transition(background-color .2s ease-out);

		&.suggest-hover {
			background-color: $action-hover-color;
		}
	}
}

.overlay-dialogue {
	display: table;
	position: absolute;
	z-index: 1000;
	padding: 15px 10px 10px 10px;
	background-color: $ui-bg-color;
	border: 1px solid $action-border-color;
	border-bottom-color: darken($action-border-color, 1%);
	@include box-shadow(0 4px 20px 0 $action-shadow-color);

	&.modal {
		position: fixed;
		top: 50%;
		left: 50%;
		max-height: 90%;
		max-width: 75%;
		overflow: hidden;
		@include transform(translate(-50%, -50%));

		.overlay-dialogue-body {
			overflow: auto;
			max-height: calc(100vh - 190px);
			margin: 0 0 10px 0;
		}
		& > .overlay-close-btn {
			position: relative;
			float: right;
			top: -12px;
			right: -8px;
		}
	}

	.list-table {
		border: none;

		th {
			@extend %dashbrd-widget-td;
		}

		td {
			@extend %dashbrd-widget-td;
		}
	}

	.table-paging {
		border: none;
		border-top: 1px solid $table-border-color;
	}

	.table-forms-td-left {
		text-align: left;
	}

	.table-forms-td-right {

		td {
			vertical-align: middle;

			label {
				display: block;
			}
		}
	}

	.dashbrd-widget-head {
		margin: -10px -10px 6px -10px;
	}

	.maps-container {
		max-height: 128px;
		overflow-y: auto;
		margin-left: -10px;
		@extend %webkit-scrollbar;
	}
}

// Map widget back to parent button.
.btn-back-map-container {

	text-align: left;
	position: absolute;
	left: -1px;

	.btn-back-map {
		margin-top: 10px;
		border-radius: 0px 2px 2px 0px;
		background-color: $btn-back-map-background-color;
		padding: 0px 0px 0px 0px;
		display: inline-block;
		height: 24px;
		line-height: 24px;
		vertical-align: middle;
		border: $ui-border-color solid 1px;
		color: $btn-back-text-color;
		text-decoration: none;

		.btn-back-map-content {
			display: none;
		}

		.btn-back-map-icon {
			margin-left: 5px;
			display: inline-block;
			width: 28px;
			height: 24px;
			vertical-align: middle;
			background: url(../img/icon-sprite.svg) no-repeat -85px -691px;
		}

		&:hover {
			background-color: $btn-back-background-hover;
			border: $btn-border-color solid 1px;

			.btn-back-map-content {
				display: inline-block;
				line-height: 24px;
				padding: 0px 6px 0px 0px;
			}
		}
	}
}

.overlay-dialogue-body {
	margin: 0 0 25px 0;
	white-space: nowrap;
}

.overlay-dialogue-footer {
	text-align: right;

	button {
		margin: 0 0 0 10px;
	}
}

.overlay-bg {
	background-color: $overlay-bg-color;
	width: 100%;
	height: 100%;
	position: fixed;
	z-index: 1000;
	top: 0;
	left: 0;
	@include opacity(0.35);
}

.calendar {
	width: 200px;

	.selected {
		background-color: $ui-bg-selected-color;
		color: $white;

		&:hover {
			@extend .selected
		}
	}

	table {
		width: 100%;
		margin: 5px 0;

		thead {
			text-transform: $font-transform;
			color: $font-alt-color;
		}

		tbody {
			text-align: center;

			td {
				padding: 4px;
				@include transition(background-color .2s ease-out);

				&:hover {
					background-color: $action-hover-color;
					cursor: pointer;
				}
			}
		}
	}
}

.calendar-header {
	text-align: center;

	.btn-grey {
		border: none;
		background-color: $transparent;
	}
}

.calendar-year {
	height: 24px;
	line-height: 26px;

	button:first-child {
		float: left;
	}

	button:last-child {
		float: right;
	}
}

.calendar-month {
	@extend .calendar-year;
}

.calendar-time {
	text-align: center;

	input[type="text"] {
		width: 32px;
	}
}

.calendar-footer {
	margin: 26px 0 0 0;
	text-align: right;

	.btn-grey {
		float: left;
		margin-top: 0;
	}
}

// Problem notification overlay
.notif {
	width: 250px;

	.dashbrd-widget-head {
		margin: -11px 0 7px -9px;
		padding: 0;

		ul {
			position: relative;
			display: inline-block;

			li {
				float: none;
				display: inline-block;
			}
		}
	}

}

.notif-body {
	max-height: 600px;
	padding: 0 5px 0 0;
	overflow-y: auto;
	@extend %webkit-scrollbar;

	h4 {
		display: block;
		max-width: 250px;
		padding-bottom: 0.083em;
		@extend %overflow-ellipsis;
	}

	p {
		margin: 0.25em 0 0 0;
	}

	li {
		padding: 0 0 10px 19px;

		&:last-child {
			padding-bottom: 0;
		}
	}
}

.notif-indic {
	width: 14px;
	height: 14px;
	float: left;
	margin: 2px 0 0 -19px;
	@include border-radius(2px);
}

.notif-indic-container {
	border-top: 1px solid $table-border-color;
	margin: 0 0 0 -19px;
	padding: 14px 0 0 0;

	.notif-indic {
		float: none;
		display: inline-block;
		margin: 0 2px 0 0;
	}
}

// Maps, Screens, Graphs
.box_on {
	position: absolute;
	z-index: 99;
}

.screen-table {
	background-color: $ui-bg-color;
	width: 100%;

	td {
		padding: 2px 3px;
	}

	.table-forms {
		text-align: left;
	}

	.list-table {
		border: none;

		td {
			text-align: left;
			padding: 6px 5px;
			border: none;
			border-bottom: 1px solid $table-border-color;
		}
	}

	.dashbrd-widget {
		margin: 0;
		border: none;

		th {
			padding: 6px 5px;
		}
	}

	.dashbrd-widget-head {
		text-align: left;
		padding: 4px 5px;

		li {
			line-height: 2.9em;
		}
	}

	.dashbrd-widget-foot {
		margin: 0;
	}

	.nothing-to-show {

		td {
			text-align: center !important;
		}
	}
}

.dashed-border {

	td {
		border: 1px dashed $table-border-color;
	}
}

.top {
	vertical-align: top;
}

.right {
	text-align: right !important;
}

.bottom {
	vertical-align: bottom;
}

.left {
	text-align: left;
}

.center {
	text-align: center;
}

.middle {
	vertical-align: middle;
}


.graph-selection {
	position: absolute;
	z-index: 98;
	overflow: hidden;
	background-color: rgba($yellow,0.35);
	border: 1px solid rgba($dark-yellow,0.6);
	border-top: none;
	border-bottom: none;
}
/* ... */

