..F....... [ZBX-12593] fixed overlay window displaying on different browsers and removed horizontal scrollbar from widget configuration dialogue
git-svn-id: svn://svn.zabbix.com/trunk@71625 97f52cf1-0a1b-0410-bd0e-c28be96e8082

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3229,14 +3229,14 @@ $form-icon-btn: (
 		position: fixed;
 		top: 50%;
 		left: 50%;
-		max-height: 90%;
-		max-width: 75%;
 		overflow: hidden;
 		@include transform(translate(-50%, -50%));
 
 		.overlay-dialogue-body {
 			overflow: auto;
+			overflow-x: hidden;
 			max-height: calc(100vh - 190px);
+			max-width: inherit;
 			margin: 0 0 10px 0;
 		}
 		& > .overlay-close-btn {
